--- a/package.json
+++ b/package.json
@@ -1,78 +1,88 @@
 {
-    "name": "@arcvue/vue-components",
-    "version": "1.0.0",
-    "description": "A comprehensive Vue 3/Vite web component and composable library with Custom Elements support",
-    "type": "module",
-    "main": "./dist/index.js",
-    "module": "./dist/index.js",
-    "exports": {
-        ".": {
-            "import": "./dist/index.js",
-            "require": "./dist/index.cjs"
-        },
-        "./style.css": "./dist/index.css"
+  "name": "@arcvue/vue-components",
+  "version": "1.0.0",
+  "description": "A comprehensive Vue 3/Vite web component and composable library with Custom Elements support",
+  "type": "module",
+  "main": "./dist/cjs/index.cjs",
+  "module": "./dist/es/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/es/index.js",
+      "require": "./dist/cjs/index.cjs"
     },
-    "files": [
-        "dist",
-        "README.md"
-    ],
-    "scripts": {
-        "dev": "concurrently \"pnpm dev:server\" \"pnpm storybook\"",
-        "dev:server": "node server/server.js",
-        "build": "vite build",
-        "build:custom-elements": "node scripts/build-custom-elements.js",
-        "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build",
-        "lint": "eslint . --ext .vue,.js --fix",
-        "format": "prettier --write .",
-        "validate-docs": "node scripts/validate-jsdoc.js",
-        "preview": "vite preview"
+    "./components/*": {
+      "import": "./dist/es/components/*.js",
+      "require": "./dist/cjs/components/*.cjs"
     },
-    "keywords": [
-        "vue",
-        "vue3",
-        "components",
-        "composables",
-        "web-components",
-        "custom-elements",
-        "vite",
-        "storybook"
-    ],
-    "author": "ArcVue Team",
-    "license": "MIT",
-    "peerDependencies": {
-        "vue": "^3.3.0"
+    "./composables/*": {
+      "import": "./dist/es/composables/*.js",
+      "require": "./dist/cjs/composables/*.cjs"
     },
-    "devDependencies": {
-        "@storybook/addon-essentials": "^8.3.0",
-        "@storybook/addon-interactions": "^8.3.0",
-        "@storybook/addon-links": "^8.3.0",
-        "@storybook/blocks": "^8.3.0",
-        "@storybook/test": "^8.3.0",
-        "@storybook/vue3": "^8.3.0",
-        "@storybook/vue3-vite": "^8.3.0",
-        "@vitejs/plugin-vue": "^5.1.0",
-        "autoprefixer": "^10.4.20",
-        "concurrently": "^9.0.0",
-        "cors": "^2.8.5",
-        "eslint": "^9.12.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-vue": "^9.28.0",
-        "express": "^4.21.0",
-        "multer": "^1.4.4",
-        "postcss": "^8.4.47",
-        "prettier": "^3.3.0",
-        "socket.io": "^4.7.5",
-        "storybook": "^8.3.0",
-        "vite": "^5.4.0",
-        "vue": "^3.5.0"
+    "./custom-elements": {
+      "import": "./dist/custom-elements/registry.js"
     },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/arcvue/vue-components.git"
-    },
-    "bugs": {
-        "url": "https://github.com/arcvue/vue-components/issues"
-    },
-    "homepage": "https://github.com/arcvue/vue-components#readme"
+    "./style.css": "./dist/es/index.css",
+    "./dist/*": "./dist/*"
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "scripts": {
+    "dev": "concurrently \"pnpm dev:server\" \"pnpm storybook\"",
+    "dev:server": "node server/server.js",
+    "build": "vite build",
+    "build:custom-elements": "node scripts/build-custom-elements.js",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "lint": "eslint . --ext .vue,.js --fix",
+    "format": "prettier --write .",
+    "validate-docs": "node scripts/validate-jsdoc.js",
+    "preview": "vite preview"
+  },
+  "keywords": [
+    "vue",
+    "vue3",
+    "components",
+    "composables",
+    "web-components",
+    "custom-elements",
+    "vite",
+    "storybook"
+  ],
+  "author": "ArcVue Team",
+  "license": "MIT",
+  "peerDependencies": {
+    "vue": "^3.3.0"
+  },
+  "devDependencies": {
+    "@storybook/addon-links": "^10.0.7",
+    "@storybook/vue3-vite": "^10.0.7",
+    "@vitejs/plugin-vue": "^5.1.0",
+    "autoprefixer": "^10.4.20",
+    "concurrently": "^9.0.0",
+    "cors": "^2.8.5",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-vue": "^9.28.0",
+    "express": "^4.21.0",
+    "glob": "^11.0.3",
+    "multer": "^1.4.4",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.0",
+    "socket.io": "^4.7.5",
+    "storybook": "^10.0.7",
+    "vite": "^5.4.0",
+    "vue": "^3.5.0",
+    "@storybook/addon-docs": "^10.0.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arcvue/vue-components.git"
+  },
+  "bugs": {
+    "url": "https://github.com/arcvue/vue-components/issues"
+  },
+  "homepage": "https://github.com/arcvue/vue-components#readme"
 }
